Lab 1 - Files/build-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: docker-image-build
spec:
  containers:
    - name: ez-docker-helm-build
      image: ezezeasy/ez-docker-helm-build:1.41
      imagePullPolicy: Always
      securityContext:
        privileged: true
