Lab 1 - Files/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jenkins
  namespace: ci
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: jenkins
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 50000
